--- a/posts/note/tibero/install-on-redhat8.mdx
+++ b/posts/note/tibero/install-on-redhat8.mdx
@@ -5,7 +5,7 @@ date: 2021-05-01
 
 ## Tibero6 다운 및 설치
 
-[tmaxsoft](https://technet.tmaxsoft.com/ko/front/main/main.do) 접속 후 로그인 <br>
+[tmaxsoft](https://technet.tmaxsoft.com/ko/front/main/main.do) 접속 후 로그인
 다운로드 > 데이터베이스 >  Tibero > Tibero6 > `Linux~.tar.gz` 다운로드
 
 ![](https://github.com/MiryangJung/TIL/blob/master/assets/images/Tibero/install-on-redhat8/1.PNG?raw=true)
@@ -128,7 +128,7 @@ $ firewall-cmd --reload
 $ firewall-cmd --zone=public --list-all
 ```
 
-[tmaxsoft](https://technet.tmaxsoft.com/ko/front/main/main.do) 접속 후 로그인 <br>
+[tmaxsoft](https://technet.tmaxsoft.com/ko/front/main/main.do) 접속 후 로그인
 다운로드 > 데이터베이스 >  Tibero > Tibero Studio > `Windows~` 다운로드
 
 `TiberoStudio2~.zip` 압축해제 후 `TiberoStudio.exe` 실행
