Edit post 2021 Review

--- a/posts/blog/2021-review.mdx
+++ b/posts/blog/2021-review.mdx
@@ -164,3 +164,7 @@ Next.js를 전혀 할 줄 모르므로
 3. 알라딘 책장에 쌓인 책들을 다 읽자.
 4. 블로그에 한 달에 글 하나는 쓰자.
 5. 사이드프로젝트를 해보자.
+
+
+##### 마무리하면서 TMI
+외주하고 받은 돈으로 맥북m1pro 16인치와 아이패드에어 4세대를 샀습니다. 최고의 소비!
