Fix typo Cloudflare Workers & KV로 Guestbook 개발하기

--- a/posts/blog/develop-guestbook-with-cloudflareworkers.mdx
+++ b/posts/blog/develop-guestbook-with-cloudflareworkers.mdx
@@ -162,7 +162,7 @@ async function updateGuestbook(request) {
 
 #### 게스트북 배포하기
 
-블로그에 내가 생각한 문자함 말풍서 디자인으로 퍼블리싱을 하고, 배포한 workers에 연결까지 마치고 [배포](https://miryang.dev/guestbook) 를 했다.
+블로그에 내가 생각한 문자함 말풍선 디자인으로 퍼블리싱을 하고, 배포한 workers에 연결까지 마치고 [배포](https://miryang.dev/guestbook) 를 했다.
 
 ![](/posts/develop-guestbook-with-cloudflareworkers/완성.gif)
 
@@ -199,7 +199,7 @@ obj['2022. 1'] = JSON.parse(cache)
 
 시간이 될 때 [Create a serverless, globally distributed REST API with Fauna](https://developers.cloudflare.com/workers/tutorials/store-data-with-fauna) 를 참고해서 저장소를 옮겨볼 생각이다.
 
-코드 정리가 안되어서 Guestbook Cloudflare Workers 코드는 아직 비공개지만 정리가 되면 레포를 바로 퍼블릭으로 변경해서 공개하고 싶다.
+코드 정리가 안되어서 Guestbook Cloudflare Workers 코드는 아직 비공개지만 정리가 되면 레포를 퍼블릭으로 변경해서 공개하고 싶다.
 
 > [게스트북 바로가기](https://miryang.dev/guestbook)
 
