Edit Cloudflare Workers & KV로 Guestbook 개발하기

--- a/posts/blog/develop-guestbook-with-cloudflareworkers.mdx
+++ b/posts/blog/develop-guestbook-with-cloudflareworkers.mdx
@@ -171,6 +171,8 @@ async function updateGuestbook(request) {
 - 색상 선택 시 전송 버튼의 border color도 같이 반영하기
 - 접속 시 랜덤으로 말풍선 색상 정하기 (지금은 무조건 첫 번째 색상인 회색)
 
+*위의 수정하고 싶은 두가지는 이 글을 올리고 바로 개발해서 반영해두었다.* :)
+
 배포하고 여기저기 자랑을 하고 다니며 뿌듯해할 때까진 몰랐다.  
 Cloudflare KV의 경고 메일을 받을 줄은...
 
