Edit Post Cloudflare Workers & KV로 Guestbook 개발하기

--- a/posts/blog/develop-guestbook-with-cloudflareworkers.mdx
+++ b/posts/blog/develop-guestbook-with-cloudflareworkers.mdx
@@ -203,6 +203,8 @@ obj['2022. 1'] = JSON.parse(cache)
 
 코드 정리가 안되어서 Guestbook Cloudflare Workers 코드는 아직 비공개지만 정리가 되면 레포를 퍼블릭으로 변경해서 공개하고 싶다.
 
+*1월 21일 : 레포를 공개하였습니다. [miryang.dev-guestbook](https://github.com/MiryangJung/miryang.dev-guestbook).*
+
 > [게스트북 바로가기](https://miryang.dev/guestbook)
 
 ### Refer
