--- a/posts/blog/build-blog-with-nextjs.mdx
+++ b/posts/blog/build-blog-with-nextjs.mdx
@@ -408,7 +408,7 @@ module.exports = withContentlayer()({
 
 `.md` 파일 생성
 
-```mdx:posts/first.mdx
+```md:posts/first.mdx
 ---
 title: Miryang의 Next.js 핸즈온
 date: 2022-03-10
