--- a/posts/blog/build-blog-with-nextjs.mdx
+++ b/posts/blog/build-blog-with-nextjs.mdx
@@ -8,6 +8,8 @@ thumbnailUrl: /posts/thumbnail/build-blog-with-nextjs.png
 **Next.js로 나만의 블로그 만들기** 핸즈온 이벤트 참여자 대상으로 작성된 안내서로
 자세한 설명은 핸즈온에서 구두로 합니다.
 
+- [Github Repo](https://github.com/MiryangJung/Build-Own-blog-With-Next.js)
+
 ## Next.js 특징
 
 - SSR (Server-Side-Rendering)
@@ -717,3 +719,14 @@ module.exports = {
     "postbuild": "next-sitemap",
 },
 ```
+
+## 7️⃣ 배포
+
+> [vercel](https://vercel.com)
+
+1. 블로그 코드를 github에 올리기
+2. **vercel** 접속 후 로그인
+3. New Project 클릭
+4. 블로그 repo import
+5. project name 설정
+6. deploy
