--- a/posts/blog/build-blog-with-nextjs.mdx
+++ b/posts/blog/build-blog-with-nextjs.mdx
@@ -5,10 +5,14 @@ description: Next.js 와 tailwind를 사용해 정적 블로그 만들기
 thumbnailUrl: /posts/thumbnail/build-blog-with-nextjs.png
 ---
 
-**Next.js로 나만의 블로그 만들기** 핸즈온 이벤트 참여자 대상으로 작성된 안내서로
-자세한 설명은 핸즈온에서 구두로 합니다.
+**Next.js로 나만의 블로그 만들기** [핸즈온 세션](https://event-us.kr/miryang/event/42689) 참여자 대상으로 작성된 안내서로
+자세한 설명은 [핸즈온](https://event-us.kr/miryang/event/42689)에서 구두로 합니다.
 
 - [Github Repo](https://github.com/MiryangJung/Build-Own-blog-With-Next.js)
+
+## 이런 걸 만듭니다.
+
+![](/posts/build-blog-with-nextjs/1.gif)
 
 ## Next.js 특징
 
@@ -730,3 +734,5 @@ module.exports = {
 4. 블로그 repo import
 5. project name 설정
 6. deploy
+
+
