--- a/posts/blog/build-blog-with-nextjs.mdx
+++ b/posts/blog/build-blog-with-nextjs.mdx
@@ -10,6 +10,12 @@ thumbnailUrl: /posts/thumbnail/build-blog-with-nextjs.png
 
 - [Github Repo](https://github.com/MiryangJung/Build-Own-blog-With-Next.js)
 
+## 목표
+
+- Next.js를 간단하게 알아봅니다.
+- mdx를 사용하는 방법을 알아봅니다.
+- seo를 간단하게 알아봅니다.
+
 ## 이런 걸 만듭니다.
 
 ![](/posts/build-blog-with-nextjs/1.gif)
