--- a/posts/blog/build-blog-with-nextjs.mdx
+++ b/posts/blog/build-blog-with-nextjs.mdx
@@ -5,6 +5,9 @@ description: Next.js 와 tailwind를 사용해 정적 블로그 만들기
 thumbnailUrl: /posts/thumbnail/build-blog-with-nextjs.png
 ---
 
+이 블로그 [miryang.dev](https://github.com/MiryangJung/miryang.dev) 는 Next.js로 만들어졌습니다.  
+어떻게 만드는지 궁금해하시는 분들이 많아서 가이드와 핸즈온음 준비했습니다.
+
 **Next.js로 나만의 블로그 만들기** [핸즈온 세션](https://event-us.kr/miryang/event/42689) 참여자 대상으로 작성된 안내서로
 자세한 설명은 [핸즈온](https://event-us.kr/miryang/event/42689)에서 구두로 합니다.
 
