--- a/posts/blog/build-blog-with-nextjs.mdx
+++ b/posts/blog/build-blog-with-nextjs.mdx
@@ -58,6 +58,7 @@ thumbnailUrl: /posts/thumbnail/build-blog-with-nextjs.png
 ## 1️⃣ 1. 시작하기
 
 - [해당 브랜치](https://github.com/MiryangJung/Build-Own-blog-With-Next.js/tree/1/start)
+- `git clone -b 1/start https://github.com/MiryangJung/Build-Own-blog-With-Next.js`
 
 ### 보일러플레이트 설치
 
@@ -110,6 +111,7 @@ yarn dev
 ## 2️⃣ 2. 라우팅
 
 - [해당 브랜치](https://github.com/MiryangJung/Build-Own-blog-With-Next.js/tree/2/routing)
+- `git clone -b 2/routing https://github.com/MiryangJung/Build-Own-blog-With-Next.js`
 
 ### 페이지 생성
 
@@ -220,6 +222,10 @@ export default Home;
 ```
 
 ## 3️⃣ 3. 스타일링
+
+- [해당 브랜치](https://github.com/MiryangJung/Build-Own-blog-With-Next.js/tree/3/styling)
+- `git clone -b 3/styling https://github.com/MiryangJung/Build-Own-blog-With-Next.js`
+
 
 쉬운 데이터 관리를 위해 `metadata.ts` 생성
 
@@ -376,6 +382,7 @@ export default Blog;
 ## 4️⃣ 4. contentlayer
 
 - [해당 브랜치](https://github.com/MiryangJung/Build-Own-blog-With-Next.js/tree/4/contentlayer)
+- `git clone -b 4/contentlayer https://github.com/MiryangJung/Build-Own-blog-With-Next.js`
 
 > [contentlayer](https://github.com/contentlayerdev/contentlayer)  
 > "contentlayer": "^0.1.2" 버전 사용  
@@ -584,6 +591,7 @@ export default Home;
 ## 5️⃣ 5. Blog Post
 
 - [해당 브랜치](https://github.com/MiryangJung/Build-Own-blog-With-Next.js/tree/5/post)
+- `git clone -b 5/post https://github.com/MiryangJung/Build-Own-blog-With-Next.js`
 
 blog 글 페이지 생성  
 post code를 html로 변환
@@ -651,6 +659,7 @@ module.exports = {
 ## 6️⃣ 6. SEO
 
 - [해당 브랜치](https://github.com/MiryangJung/Build-Own-blog-With-Next.js/tree/6/seo)
+- `git clone -b 6/seo https://github.com/MiryangJung/Build-Own-blog-With-Next.js`
 
 > Search Engine Optimization  
 > 검색 엔진에서의 노출도를 높이도록 사이트를 개선하는 최적화 작업  
@@ -731,7 +740,7 @@ module.exports = {
 },
 ```
 
-## 7️⃣ 배포
+## 7️⃣ 7. 배포
 
 > [vercel](https://vercel.com)
 
