--- a/posts/note/purescript/purescript-book-chapter8-1.mdx
+++ b/posts/note/purescript/purescript-book-chapter8-1.mdx
@@ -7,7 +7,7 @@ date: 2022-03-19
 
 가볍게 읽어보기!
 
-- [3분 모나드][https://overcurried.com/3%EB%B6%84%20%EB%AA%A8%EB%82%98%EB%93%9C/] 먼저 읽어보기
+- [3분 모나드](https://overcurried.com/3%EB%B6%84%20%EB%AA%A8%EB%82%98%EB%93%9C/) 먼저 읽어보기
 
 ## The Monad Type Class
 
