Post purescript-book-chapter8-2

--- a/posts/note/purescript/purescript-book-chapter8-1.mdx
+++ b/posts/note/purescript/purescript-book-chapter8-1.mdx
@@ -3,7 +3,7 @@ title: 퓨어스크립트 북 챕터8 앞부분 가볍게 읽어보는 메모장
 date: 2022-03-19
 ---
 
-> [퓨어스크립트 북 챕터8 - Type Classes](https://book.purescript.org/chapter8.html)
+> [퓨어스크립트 북 챕터8 - The Effect Monad](https://book.purescript.org/chapter8.html)
 
 가볍게 읽어보기!
 
