feat: contentlayer version up, tags 추가

--- a/posts/blog/2021-review.mdx
+++ b/posts/blog/2021-review.mdx
@@ -3,6 +3,7 @@ title: 주니어 개발자의 2021 회고
 date: 2021-12-18
 description: 2021년 1년동안 뭐했나?
 thumbnailUrl: /posts/thumbnail/2021-review.jpg
+tags: ['2021 회고', '회고', '주니어개발자']
 ---
 
 ## 🤵🏻‍♀️ 이직을 했으나 다시 돌아갔고, 백수가 되었다.
