--- a/posts/blog/build-blog-with-nextjs.mdx
+++ b/posts/blog/build-blog-with-nextjs.mdx
@@ -3,6 +3,7 @@ title: Next.js로 나만의 블로그 만들기 with 정적 생성
 date: 2022-03-10
 description: Next.js 와 tailwind를 사용해 정적 블로그 만들기
 thumbnailUrl: /posts/thumbnail/build-blog-with-nextjs.png
+tags: ['next.js', '블로그 만들기', 'contentlayer']
 ---
 
 이 블로그 [miryang.dev](https://github.com/MiryangJung/miryang.dev) 는 Next.js로 만들어졌습니다.  
