--- a/posts/blog/develop-guestbook-with-cloudflareworkers.mdx
+++ b/posts/blog/develop-guestbook-with-cloudflareworkers.mdx
@@ -3,6 +3,7 @@ title: Cloudflare Workers & KV로 Guestbook 개발하기
 date: 2022-01-14
 description: Develop Guestbook with Cloudflare Workers & KV
 thumbnailUrl: /posts/thumbnail/develop-guestbook-with-cloudflareworkers.png
+tags: ['cloudflare workers', 'cloudflare kv', 'cloudflare']
 ---
 
 > [게스트북 바로가기](https://miryang.dev/guestbook)
