--- a/posts/blog/nextjs-light-dark-mode.mdx
+++ b/posts/blog/nextjs-light-dark-mode.mdx
@@ -3,6 +3,7 @@ title: Next.js 정적블로그에 Light & Black 모드 추가하기
 date: 2022-03-08
 description: Black 테마만 있던 Next.js블로그에 Light 테마 추가하기
 thumbnailUrl: /posts/thumbnail/nextjs-light-dark-mode.jpg
+tags: ['next.js', '정적 블로그', 'nextjs-light-dark-mode']
 ---
 
 ## ⚫️ 내 블로그에 Light Black 모드를 추가하자
