--- a/posts/blog/build-blog-with-nextjs.mdx
+++ b/posts/blog/build-blog-with-nextjs.mdx
@@ -12,6 +12,13 @@ tags: ['next.js', '블로그 만들기', 'contentlayer']
 **Next.js로 나만의 블로그 만들기** [핸즈온 세션](https://event-us.kr/miryang/event/42689) 참여자 대상으로 작성된 안내서로
 자세한 설명은 [핸즈온](https://event-us.kr/miryang/event/42689)에서 구두로 합니다.
 
+> 핸즈온 후기!  
+> - 혼자 했으면 오래 걸리거나 중간에 그만뒀을텐데 자세히 설명도 해주시고 실시간으로 보여주셔서 잘 만들 수 있었습니다  
+> - 좋은 강의 감사합니다 덕분에 next.js 영업당했어요!ㅋㅋㅋㅋㅋ 다음에도 또 참여하고싶어요!!  
+> - 만족스러운 강의였습니다. 다음 강의도 기다리겠습니다 :)  
+> - 아직 next.js나 ts 지식이 부족해서 따라가기 힘든 점은 있었지만 이런식으로 구성되어 있다는걸 알 수 있는 점이 좋았어요!  
+> - next.js 블로그 만들기를 예전에 도전했다가 실패한 경험이 있었어요. 미량님 강의를 들으니까 next.js가 어떻게 동작하는지 (라우팅, seo...) 에대해 감을 잡을 수 있었습니다. 너무 감사해요.
+
 - [Github Repo](https://github.com/MiryangJung/Build-Own-blog-With-Next.js)
 
 ## 목표
