--- a/posts/blog/how-studied-frontend.mdx
+++ b/posts/blog/how-studied-frontend.mdx
@@ -12,7 +12,7 @@ tags: ['프론트엔드', 'frontend', '공부', '개발', 'react', 'nextjs']
 3년 차 개발자이지만 **경력 3개월의 프런트엔드 개발자**이기도 합니다. 아 그리고 저는 전공자가 아닙니다!  
 ( 보안을 전공해서 반전공자라고 스스로 부릅니다. :D )
 
-프런트엔드를 준비한 기간은 약 4~5개월 정도이고, 어떻게 무엇을 했는지 적어보려고 합니다.  
+프런트엔드를 준비한 기간은 약 4~5개월 정도이고 직장과 병행했습니다. 어떻게 무엇을 했는지 적어보려고 합니다.  
 _사실 거창한 일도 아니고 조금 오글거려서 쓸까 말까 고민을 엄청 했는데 커리어를 시작한 지 얼마 안 된 파릇파릇한 이때아니면 언제 적겠나 싶더군요._  
 나중에 부끄러워져서 글을 내릴 수도 있지만 일단은 적어보겠습니다. 이걸 쓰는 지금도 너무나 나대는(?) 거 같아서 굉장히 부끄럽습니다.
 
