edit 퓨어스크립트 북 챕터3 두 번째 읽어보는 메모장

--- a/posts/note/purescript/purescript-book-chapter3-2.mdx
+++ b/posts/note/purescript/purescript-book-chapter3-2.mdx
@@ -26,9 +26,10 @@ f :: (->) Number Number
 
 ## Quantified Types
 
-`forall` : parametric polymorphism
+`forall` : parametric polymorphism  
+이것은 제네릭과 비슷?
 
-`flip` : (a, b) => c 를 받아서 (b, a) => c 를 반환
+`flip` : (a, b) -> c 를 받아서 (b, a) -> c 를 반환
 
 ## Curried Functions
 
