--- a/posts/blog/create-remix-res-blog.mdx
+++ b/posts/blog/create-remix-res-blog.mdx
@@ -2,7 +2,7 @@
 title: Remix로 블로그 만들기, 근데 이제 ReScript를 곁들인
 date: 2022-06-28
 description: ReScript와 Remix로 블로그 템플릿을 만들어보자, 근데 이제 바인딩을 곁들인
-thumbnailUrl: https://github.com/MiryangJung/rescript-remix-blog-template/raw/main/docs/home.png
+thumbnailUrl: /posts/thumbnail/create-remix-res-blog.png
 tags:
   [
     'remix',
