edit Remix로 블로그 만들기, 근데 이제 ReScript를 곁들인

--- a/posts/blog/create-remix-res-blog.mdx
+++ b/posts/blog/create-remix-res-blog.mdx
@@ -115,6 +115,10 @@ export function links() {
 
 `ReScript` docs를 열심히 읽어서 `%raw` 로 사용하면 된다는 것을 찾았고, 깔끔하게 해결했다.
 
+- 이 부분은 더 나은 방법을 알려주셔서 수정할 예정!
+  - [external 바인딩](https://rescript-lang.org/try?code=AIWw9gJgrgNgpgCgEQDoD0BnALgT3htAcxjACMBDGFAYwwyQEoACYAN0qbgA8s4AnAHYdseOBgBcTbHwCWAwkwC8TJBDgAzcrCxIAULtwAHOExhyA1ru69BHMwPOSA5OSUA+UxaUqApDLUCWDK4errAcvZwuvBYUrjwABZwcLHKCAB+CXwaADRMCAzMim66TJ4OCADepWUq2TBIkgDEIvhJKTk1ZUhZGo1MveqdZQC+DPox5eYY3gXuTNVlANqtcO1YGYOKqxh5BQwAurojukA)
+  - [refer](https://twitter.com/KrComet/status/1541806588696363009?s=20&t=NgcZ4IFniwPBy0a1mKfXvg)
+
 ```reason:App.res
 let links = () => {
   let styles = %raw("require('./styles/global.css')")
@@ -190,3 +194,9 @@ _tmi) nested routing 처음 써봤는데 정말 편하다._
 좋은 아이디어가 있으신 분은 제 트위터나 메일로 연락 부탁드립니다. ❤️‍🔥
 
 > 아무쪼록 나중에 누군가 ReScript와 Remix를 같이 사용할 날이 온다면 이 글이 도움이 되기를...
+
+
+### Tip!
+
+- ReScript를 맛보고 싶다면?
+  - [그린랩스: 월간FP AoC 2020, day6⎮ReScript](https://www.youtube.com/watch?v=vQM0i6IPqm0)
