--- a/posts/blog/try-nextjs-relay-rescript.mdx
+++ b/posts/blog/try-nextjs-relay-rescript.mdx
@@ -265,7 +265,7 @@ import * as Curry from "rescript/lib/es6/curry.js";
 [2] SyntaxError: Cannot use import statement outside a module
 ```
 
-![](/posts/try-nextjs-relay-rescript/1.jpeg)
+![](/posts/try-nextjs-relay-rescript/1.png)
 
 rescript-relay 디스코드에 질문해서 해결!  
 `Next.js` 에서 es6 사용 불가능 당연함 서버사이드임.
