update: Next.js(SSR) + Relay + ReScript 해보기

--- a/posts/blog/try-nextjs-relay-rescript.mdx
+++ b/posts/blog/try-nextjs-relay-rescript.mdx
@@ -19,6 +19,8 @@ tags:
 환경 세팅이 되어있는 프로젝트 위에서 개발을 하다보니 문득 첫 세팅은 어떻게 하는 걸까 궁금해졌습니다.  
 그래서 공부 용으로 `Next.js` + `Relay` + `ReScript` + `SSR` 을 해봅니다.
 
+> 코드는 [여기서](https://github.com/MiryangJung/nnr) 확인할 수 있습니다.
+
 ## 🍔 Next.js + ReScript 세팅
 
 create next app으로 `Next.js` 프로젝트 생성  
@@ -287,7 +289,9 @@ commonjs로 바꾸고, 빌드하니 알 수 없는 에러가 뜸.
 hydrating 에러 Hi~
 
 ```plain
-Error: This Suspense boundary received an update before it finished hydrating. This caused the boundary to switch to client rendering. The usual way to fix this is to wrap the original update in startTransition.
+Error: This Suspense boundary received an update before it finished hydrating.
+This caused the boundary to switch to client rendering.
+The usual way to fix this is to wrap the original update in startTransition.
 ```
 
 여전히 작성 중...
