edit Next.js(SSR) + Relay + ReScript 해보기

--- a/posts/blog/try-nextjs-relay-rescript.mdx
+++ b/posts/blog/try-nextjs-relay-rescript.mdx
@@ -344,6 +344,11 @@ or Remix (everything centered around a server driven loader) works optimally
 for GraphQL/Relay in particular
 ```
 
+`rescript-relay` 디스코드에서 나눈 대화.  
+이거 내가 할 수 있는 걸까? 🥹
+
+![](/posts/try-nextjs-relay-rescript/3.png)
+
 > 해당 게시글은 에러를 수정하거나 개발이 진행될 때마다 수정됩니다.
 
 > Refer
