edit: repo link

--- a/posts/blog/try-nextjs-relay-rescript.mdx
+++ b/posts/blog/try-nextjs-relay-rescript.mdx
@@ -21,7 +21,7 @@ tags:
 환경 세팅이 되어있는 프로젝트 위에서 개발을 하다보니 문득 첫 세팅은 어떻게 하는 걸까 궁금해졌습니다.  
 그래서 공부 용으로 `Next.js` + `Relay` + `ReScript` + `SSR` 을 해봅니다.
 
-> [코드는 여기서 확인할 수 있습니다.](https://github.com/MiryangJung/nnr)
+> [코드는 여기서 확인할 수 있습니다.](https://github.com/MiryangJung/nrr)
 
 ## 🍔 Next.js + ReScript 세팅
 
