--- a/posts/blog/how-studied-frontend.mdx
+++ b/posts/blog/how-studied-frontend.mdx
@@ -144,3 +144,5 @@ _(리드미 작성법을 전수해주신 ㅎ님께 감사드립니다.)_
 > 여기까지 읽어주신 분들 감사합니다.  
 > 감상평은 [Guestbook](https://miryang.dev/guestbook) 에서 익명으로 남기실 수 있습니다.  
 > 참고로 지금 제가 잘한다는 소리는 아니고요. 어쩌면 누군가에겐 도움이 될까 싶어서 적은 글이니 맘에 들지 않는 부분이 있어도 노여워하지 말아 주세요.
+
+> 23.04.18 추가, [고량주 프론트엔드 12주 스터디 커리큘럼](https://github.com/GoRyangJu/curriculum)을 공개했습니다. 참고하세요!
