파일이름 변경

--- a/posts/blog/rn-android-dev.mdx
+++ b/posts/blog/rn-android-dev.mdx
@@ -72,8 +72,11 @@ flavorDimensions "version"
 - main : prodRelease
 - dev : devDebug
 
+![flavor](/posts/rn-android-dev/branches.png)
+
 Distribute에서 Google Play Console에 연결해준다.
 
 - 참고 [Google Play 스토어에 게시](https://learn.microsoft.com/ko-kr/appcenter/distribution/stores/googleplay)
 
 
+- [You are currently using Java 1.8 에러가 뜨는 경우](https://miryang.dev/note/react-native/java-home)
