--- a/posts/note/react-native/fcm-aos.mdx
+++ b/posts/note/react-native/fcm-aos.mdx
@@ -43,3 +43,5 @@ messaging().setBackgroundMessageHandler(async remoteMessage => {
   console.log('Message handled in the background!', remoteMessage);
 });
 ```
+
+firebase > 참여 > messaging에서 푸쉬 보낼 수 있음
